planka/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: planka
  annotations:
    argocd.argoproj.io/sync-wave: "-10"
