planka/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: planka
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`planka.k8s.karkki.org`) || Host(`planka.home.karkki.org`)
      kind: Rule
      services:
        - name: planka
          port: 1337
  tls:
    secretName: planka-tls
